update css for code to fix scroll bar covering words

--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -92,6 +92,7 @@ code {
 
 pre {
   margin-bottom: -0.5em;
+  padding: 5px 5px 15px 5px;
 }
 
 #myBtn {
